--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"mysql2": "^3.11.0",
-		"nodemon": "^3.1.4"
+		"nodemon": "^3.1.4",
+		"openai": "^4.58.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.25.2",
