--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
 	"author": "Dang Xuan Khanh",
 	"license": "ISC",
 	"dependencies": {
+		"@google/generative-ai": "^0.17.1",
 		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"mysql2": "^3.11.0",
 		"nodemon": "^3.1.4",
-		"openai": "^4.58.1"
+		"openai": "^4.58.1",
+		"signature_language": "file:"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.25.2",
