--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
 	"license": "ISC",
 	"dependencies": {
 		"@google/generative-ai": "^0.17.1",
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
+		"cloudinary": "^2.5.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"multer": "^1.4.5-lts.1",
+		"multer-storage-cloudinary": "^4.0.0",
 		"mysql2": "^3.11.0",
 		"nodemon": "^3.1.4",
 		"openai": "^4.58.1",
